fix responsiveness and implement sidebar cardhover

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<footer class="footer footer-center p-5 bg-base-200 text-base-content rounded bottom-0">
+<footer class="footer footer-center p-5 bg-base-200 text-base-content rounded static bottom-0">
     <!-- <nav>
       <div class="grid grid-flow-col gap-4">
         <a><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
