--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -17,8 +17,8 @@ const t = useTranslations(lang);
 ---
 
 <BaseLayout>
-  <article>
-    <div class="hero bg-base-200 p-2">
+  <article class="p-2">
+    <div class="hero bg-base-200">
       <div class="hero-content flex-col lg:flex-row">
         <img src="/code-hero-background.jpg" class="w-fit sm:max-w-sm rounded-lg shadow-2xl" />
         <div>
