refactoring style of home page and i18n issues

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -2,14 +2,7 @@
 
 ---
 
-<footer class="footer footer-center p-5 bg-base-200 text-base-content rounded static bottom-0">
-    <!-- <nav>
-      <div class="grid grid-flow-col gap-4">
-        <a><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
-        <a><i class="fa-brands fa-instagram fa-2xl"></i></a>
-        <a><i class="fa-brands fa-github fa-2xl"></i></a>
-      </div>
-    </nav>  -->
+<footer class="footer footer-center p-5 bg-base-200 text-base-content">
     <div class="flex">
         <p>Copyright © 2023 - Made with <i class="fa-solid fa-heart" style="color: #e01f1f;"></i> @rdvid</p>
     </div>
