--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -3,8 +3,8 @@ import Playlist from "./playlist.astro";
 
 ---
 
-<aside class="max-lg:hidden">
-  <div class="p-2 max-h-screen">
+<aside class="max-lg:hidden bg-base-200 h-full">
+  <div class="h-full flex flex-col justify-center p-2 align-center">
     <ul class="menu rounded-box bg-transparent space-y-4">
       <li class="dropdown dropdown-right dropdown-end dropdown-hover">
         <a class=" px-4 pb-4 pt-5 hover:scale-125" tabindex="0">
