--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,7 +8,7 @@ const lang = getLangFromUrl(Astro.url);
 
 ---
 
-<html lang={lang == 'br' ? 'pt-br' : lang} data-theme="lofi" class="min-h-full h-screen max-w-screen w-full overflow-x-hidden">
+<html lang={lang == 'br' ? 'pt-br' : lang} data-theme="lofi" class="min-h-full relative overflow-x-hidden">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -19,11 +19,11 @@ const lang = getLangFromUrl(Astro.url);
 		<title>< rdvid /></title>
 	</head>
 
-	<body class="min-w-screen max-lg:min-h-screen" onload="typeWriter()">
+	<body class="flex flex-col min-w-screen max-sm:h-fit h-screen" onload="typeWriter()">
         <Header />
-        <div class="flex flex-col lg:flex-row h-4/5 items-center my-4 ">
+        <div class="flex flex-col lg:flex-row h-4/5 items-center bg-base-100">
             <Sidebar />
-            <div class="w-full pt-6 pr-6 pl-2 bg-base-200 h-screen max-lg:p-2">
+            <div class="w-full h-full bg-base-100 p-8 max-lg:p-2">
                 <slot />
             </div>
         </div>   
