updating i18n labels and redesign header and intro page

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<footer class="footer footer-center p-5 bg-base-200 text-base-content">
+<footer class="footer footer-center p-5 bg-base-200 text-base-content max-sm:border-t-2 max-sm:border-black">
     <div class="flex">
         <p>Copyright © 2023 - Made with <i class="fa-solid fa-heart" style="color: #e01f1f;"></i> @rdvid</p>
     </div>
