--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,9 +21,9 @@ const lang = getLangFromUrl(Astro.url);
 
 	<body class="flex flex-col min-w-screen max-sm:h-fit h-screen" onload="typeWriter()">
         <Header />
-        <div class="flex flex-col lg:flex-row h-4/5 items-center bg-base-100">
+        <div class="flex flex-col lg:flex-row h-4/5 align-center bg-base-100">
             <Sidebar />
-            <div class="w-full h-full bg-base-100 p-8 max-lg:p-2">
+            <div class="w-full h-fit bg-base-100 lg:p-8 md:h-full md:border-2 md:border-black">
                 <slot />
             </div>
         </div>   
