--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -17,17 +17,21 @@ const t = useTranslations(lang);
 ---
 
 <BaseLayout>
-  <article class="h-full">
-    <div class="hero sm:px-8">
-      <div class="hero-content flex-col max-lg:py-8 lg:flex-row lg:align-top self-center">
-        <img src="https://avatars.githubusercontent.com/u/60834135" class="w-8/12 lg:w-3/12 rounded-full shadow-2xl" alt="my profile picture"/>
-        <div class="flex flex-col justify-center w-6/12 max-lg:w-full max-lg:p-2">
+  <article class="flex flex-col h-full max-lg:h-screen justify-center">
+    <div class="hero">
+      <div class="hero-content flex-col w-full max-lg:py-8 lg:flex-row lg:align-center">
+        <img src="https://avatars.githubusercontent.com/u/60834135" class="w-3/12 max-w-4/12 max-lg:w-8/12 rounded-full shadow-2xl border-2 border-black	" alt="my profile picture"/>
+        <div class="flex flex-col justify-center w-6/12 max-lg:w-full text-center max-lg:p-4r">
           <p id="placeholder" class="hidden">{t('home.title')}</p>
           <h1 id="home-title" class="text-4xl font-bold text-center max-lg:text-3xl"></h1>
-          <span class="flex flex-row justify-center py-6 w-fit">
-            <p class="text-justify w-8/12 max-lg:w-full">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-          </span>
-          <button class="w-3/12 btn btn-primary self-center max-lg:w-6/12"> Get Started</button>
+          <div class="flex flex-row justify-center py-6">
+            <ul class="text-lg font-light">
+              <li><i class="fa-solid fa-computer fa-md pr-4 pt-2 bg-base-100"></i>{t('home.subtitle')}</li>
+              <li><i class="fa-solid fa-music fa-lg pr-4 pt-2 bg-base-100"></i>{t('home.second-subtitle')}</li>
+            </ul>
+            <!-- <p class="w-8/12 max-lg:w-full">{t('home.subtitle')}</p> -->
+          </div>
+          <button class="w-4/12 btn btn-primary rounded-full self-center max-lg:w-6/12">About me</button>
         </div>
       </div>
     </div>
