--- a/src/components/playlist.astro
+++ b/src/components/playlist.astro
@@ -13,28 +13,30 @@ let songList = spotifyData.items.map(
 
 ---
 
-<div class="card m-10 bg-black drop-shadow-lg w-fit rounded-[16px] self-center">
-    <ul class="flex flex-col p-4">
-        <p class="px-8 py-3 text-end text-blue font-bold text-[#2e763a]">play on <i class="fa-brands fa-spotify" style="color: #2e763a;"></i></p>
-        {
-            songList.map((song) => 
-                <a href={song.url} target="_blank">
-                    <li class="flex p-8 py-0 text-primary-content hover:cursor-pointer">
-                        <div class="avatar">
-                            <div class="w-16 rounded">
-                                <img src={song.image} alt={song.name} />
-                            </div>
+<!-- <div class="card bg-black drop-shadow-lg w-fit rounded-[16px] self-center">
+    
+</div> -->
+
+<div class="flex flex-col p-4">
+    <p class="px-8 py-3 text-end text-blue font-bold text-[#2e763a]">play on <i class="fa-brands fa-spotify" style="color: #2e763a;"></i></p>
+    {
+        songList.map((song) => 
+            <a href={song.url} target="_blank" class="focus:outline-none">
+                <div class="flex flex-row p-8 py-0 text-primary-content hover:cursor-pointer w-fit">
+                    <div class="avatar">
+                        <div class="w-16 rounded">
+                            <img src={song.image} alt={song.name} />
                         </div>
-                        <div class="px-2 flex flex-col justify-center">
-                            <h4 class="font-bold">{song.name}</h4>
-                            <p>{song.artists.join(', ')}</p>
-                        </div>
-                    </li>
-                    <div class="flex flex-col w-full bg-black"> 
-                        <div class="divider m-2 py-2"></div> 
                     </div>
-                </a> 
-            )
-        }
-    </ul>
+                    <div class="px-2 flex flex-col justify-center transition-colors duration-300 ease-in-out hover:text-[#2e763a]">
+                        <h4 class="font-bold">{song.name}</h4>
+                        <p>{song.artists.join(', ')}</p>
+                    </div>
+                </div>
+            </a> 
+            <div class="flex flex-col w-full bg-black"> 
+                <div class="divider m-2 py-2"></div> 
+            </div>
+        )
+    }
 </div>
