--- a/src/components/modal/discord-card.astro
+++ b/src/components/modal/discord-card.astro
@@ -8,16 +8,18 @@
     </a>
 </li>
 
-<!-- Card #1 Github -->
+<!-- Card #4 Discord -->
 <dialog id="discordModal" class="modal modal-middle justify-center h-full">
   <div class="modal-box bg-[#7289da] border-2 border-black">
-    <h3 class="font-bold text-lg">Hello!</h3>
-    <p class="py-4">Press ESC key or click the button below to close</p>
-    <div class="modal-action">
+    <div class="modal-action justify-end mr-4">
       <form method="dialog">
-      <!-- if there is a button in form, it will close the modal -->
-        <button class="btn">Close</button>
+        <button class="btn-outline bg-transparent rounded-full text-red-700 hover:text-red-700 focus:outline-none font-extrabold absolute"><i class="fa-solid fa-xmark fa-xl"></i></button>
       </form>
     </div>
+
+    <h3 class="font-bold text-lg">Hello!</h3>
+    <p class="py-4">Press ESC key or click the button below to close</p>
+
+
   </div>
 </dialog>
