--- a/src/components/modal/gmail-card.astro
+++ b/src/components/modal/gmail-card.astro
@@ -8,7 +8,7 @@
     </a>
 </li>
 
-<!-- Card #1 Github -->
+<!-- Card #6 Gmail -->
 <dialog id="gmailModal" class="modal modal-middle justify-center h-full">
   <div class="modal-box bg-[#D44638] border-2 border-black">
     <h3 class="font-bold text-lg">Hello!</h3>
