--- a/src/components/modal/stackoverflow-card.astro
+++ b/src/components/modal/stackoverflow-card.astro
@@ -4,7 +4,7 @@
 
 <li class="tooltip tooltip-right" data-tip="My Stackoverflow">
     <a class="p-4 hover:scale-125" onclick="stackModel.showModal()">
-        <i class="fa-brands fa-stack-overflow fa-lg"></i>
+      <i class="fa-brands fa-steam fa-lg"></i>
     </a>
 </li>
 
