--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -15,10 +15,21 @@ const { lang } = Astro.params;
 ---
 <BaseLayout>
   <article>
-      <Playlist />
+    <div class="grid grid-cols-2">
+      <div class="row">
+        <h2>test</h2>
+      </div>
+      
+      <div class="row">
+        <h1>test</h1>
+      </div>
+    </div>
   </article>
 </BaseLayout>
 
-// TODO: build spanish, french and english full versions
-// TODO: fix responsiveness to small screens
-// TODO: carousel with highlighted projects
+<!-- 
+    // TODO: build spanish, french and english full versions
+    // TODO: fix responsiveness to small screens
+    // TODO: carousel with highlighted projects 
+  
+-->
