--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -13,7 +13,7 @@ const t = useTranslations(lang);
         <label tabindex="0" class="btn btn-ghost lg:hidden">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
         </label>
-        <ul tabindex="0" class="menu menu-sm dropdown-content mt-5 z-[1] p-2 shadow bg-base-100 rounded-box w-52 max-lg:w-screen justify-center">
+        <ul tabindex="0" class="menu menu-sm min-w-screen dropdown-content z-[1] p-2 shadow bg-base-200 rounded-box w-52 max-lg:w-screen justify-center">
           <li><a class="max-sm:self-center">{t('nav.about')}</a></li>
           <li class="max-sm:text-center">
             <a class="max-sm:self-center">{t('nav.projects')}</a>
@@ -30,7 +30,7 @@ const t = useTranslations(lang);
     </div>
     <div class="navbar-center hidden lg:flex">
       <ul class="menu menu-horizontal px-1">
-        <li><a>{t('nav.about')}</a></li>
+        <li><a href=`${Astro.url.origin}/${lang}/about/`>{t('nav.about')}</a></li>
         <!-- <li tabindex="0">
           <details>
             <summary>{t('nav.projects')}</summary>
@@ -46,9 +46,9 @@ const t = useTranslations(lang);
     </div>
     <div class="navbar-center flex justify-center">
       <!-- <a class="btn btn-ghost normal-case text-xl">< rdvid /></a> -->
-      <div class="dropdown dropdown-hover dropdown-center bg-transparent">
-        <label tabindex={0} class="btn p-1 bg-transparent"><a><span class=`fi fi-${ lang === 'en' ? 'us': lang }`></span></a></label>
-        <ul tabindex={0} class="dropdown-content z-[1] menu p-2 shadow bg-transparent rounded-box w-52">
+      <div class="dropdown dropdown-hover dropdown-center">
+        <label tabindex={0} class="btn p-1"><a><span class=`fi fi-${ lang === 'en' ? 'us': lang }`></span></a></label>
+        <ul tabindex={0} class="dropdown-content z-[1] menu p-2 shadow rounded-box w-52 bg-base-100">
           {
             Object.keys(languages).map((language: keyof typeof ui) => (
               <li><a href={`${Astro.url.pathname.replace(lang, language)}`}><span class={`fi fi-${language === 'en' ? 'us' : language}`}></span>{t(`nav.language.${language}`)}</a></li>
