creating icon-to-home link redirect

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -26,7 +26,7 @@ const t = useTranslations(lang);
           <li><a class="max-sm:self-center">{t('nav.contact')}</a></li>
         </ul>
       </div>
-      <a class="max-lg:hidden btn btn-ghost normal-case text-xl ml-4">< rdvid /></a>
+      <a href=`${Astro.url.origin}/${lang}/` class="max-lg:hidden btn btn-ghost normal-case text-xl ml-4">< rdvid /></a>
     </div>
     <div class="navbar-center hidden lg:flex">
       <ul class="menu menu-horizontal px-1">
